Centered website / fixed nav bar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
 	src: url('arial.ttf);
 }
 
+#wrap {
+	width: 60%;
+	margin: 0 auto;
+}
+
 html {
 	background-color: #cdcdcd;
 	font-family: "arial";
@@ -37,7 +42,7 @@ nav {
 	font-size: 1.5em;
 	display: inline;
 	text-align: right;
-	padding-left: 350px;
+	padding-left: 5%;
 }
 
 nav ul {
@@ -56,8 +61,8 @@ nav ul li {
 nav ul li a {
 	background-color: #cdcdcd; 
 	color: #000;
-	margin-left: 25px;
-	margin-right: 25px;
+	margin-left: 3%;
+	margin-right: 1%;
 	text-decoration: none;
 	-webkit-transition: all 0.2s ease-out;
 	-moz-transition: all 0.2s ease-out;
